--- a/views/login/index.jade
+++ b/views/login/index.jade
@@ -46,7 +46,7 @@ block body
                 |  Tumblr
 
   script(type='text/template', id='tmpl-login')
-    form
+    form(method="post")
       div.alerts
         |<% _.each(errors, function(err) { %>
         div.alert.alert-danger.alert-dismissable
