--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -45,6 +45,7 @@ html
 
         div.page
             div.container
+                != messages()
                 block body
 
         div.footer
