--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -62,6 +62,8 @@ html
 
         //if lte IE 9
           script(src='/layouts/ie-sucks.min.js?#{cacheBreaker}')
+        script(src='/vendor/jquery/jquery.js?#{cacheBreaker}')
         script(src='/layouts/core.min.js?#{cacheBreaker}')
+        script(src='/layouts/main.js?#{cacheBreaker}')
 
         block feet
